fix: no link label not centered

--- a/src/components/Links/links.module.scss
+++ b/src/components/Links/links.module.scss
@@ -15,6 +15,7 @@
     min-width: 0;
     width: 100%;
     text-overflow: ellipsis;
+    text-align: center;
     white-space: nowrap;
     overflow: hidden;
   }
